add JWT auth + login
