# be/src/api/interfaces/userInterfaces.ts
@@ -1,0 +1,6 @@
+// DTO per i dati dell'utente da includere nel JWT (payload)
+export interface IUserJwtPayload {
+  userId: number;
+  username: string;
+  email: string;
+}
