# be/src/api/routes/index.ts
@@ -3,6 +3,7 @@ import { healthRouter } from './healthRoutes';
 import { apiDocsRouter } from './apidocsRoutes';
 import { productRouter } from './productRoutes';
 import { userRouter } from './userRoutes';
+import { authRouter } from './authRoutes';
 
 const router: Router = Router();
 
@@ -10,5 +11,6 @@ router.use('/api-docs', apiDocsRouter);
 router.use('/health', healthRouter);
 router.use('/product', productRouter);
 router.use('/user', userRouter);
+router.use('/auth', authRouter);
 
 export default router;
