# be/src/api/types/userDto.ts
@@ -1,3 +1,4 @@
 import { components } from '../schemas';
 
 export type UserDTO = components['schemas']['User'];
+export type UserLoginDTO = components['schemas']['UserLogin'];
